k8s/postgres/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy



metadata:
  name: postgres-networkPolicy
  namespace: sport-booking


spec:
  podSelector:
    matchLabels:
      app: postgres

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 5432
